Fri Sep 18 21:39:09 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/unite/Unite_Aspect_File.h:
        * cuts/utils/unite/Unite_Aspect_File.inl:
        * cuts/utils/unite/Unite_Aspect_File.cpp:
        * cuts/utils/unite/cuts-unite.h:
        * cuts/utils/unite/cuts-unite.inl:
        * cuts/utils/unite/cuts-unite.cpp:
        * cuts/utils/unite/unite.mpc:
        * etc/schemas/cuts-unite.xsd:

          . Implemented help class for loading an apsect from the
            XML document.

          . The head document tag for the aspect XML document is now
            a single aspect, i.e., <aspect>, instead of a collection
            of aspects, i.e., <aspects>

Thu Sep 17 22:25:21 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/unite/Where_Clause_Builder.h:
        * cuts/utils/unite/Where_Clause_Builder.inl:
        * cuts/utils/unite/Where_Clause_Builder.cpp:

          . Helper class for constructing a WHERE class from the
            condition in an XML document.

        * cuts/utils/unite/Unit_Test_Builder.h:
        * cuts/utils/unite/Unit_Test_Builder.cpp:
        * cuts/utils/unite/Unit_Test_Graph_Builder.h:
        * cuts/utils/unite/Unit_Test_Graph_Builder.cpp:
        * cuts/utils/unite/Unite_App.h:
        * cuts/utils/unite/Unite_App.cpp:
        * cuts/utils/unite/Unite_Config_File.h:
        * cuts/utils/unite/Unite_Config_File.cpp:
        * cuts/utils/unite/Unite_Datagraph_File.h:
        * cuts/utils/unite/Unite_Datagraph_File.cpp:
        * cuts/utils/unite/Unite_Xml_export.h:
        * cuts/utils/unite/cuts-unite.h:
        * cuts/utils/unite/cuts-unite.inl:
        * cuts/utils/unite/cuts-unite.cpp:
        * cuts/utils/unite/unite.mpc:
        * etc/schemas/cuts-unite.xsd:

          . Prepended XML to the namespace. This will help distinguish
            the XML related classes from the CUTS standard classes.

Thu Sep 17 03:04:34 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
